# k8s-contract-repository

./: .dockerignore  .gitmodules  .releaserc.json  README.md  docker-compose.yml
api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
api/kreya/: Contract Repository API.krproj
api/kreya/ContractsService/: Get Specific Contract-request.json  Get Specific Contract.krop  List.krop
api/kreya/ContractsService/Create Contracts/: Create A - B - C-request.json  Create A - B - C.krop  Create A - B-request.json  Create A - B.krop  Create A - C-request.json  Create A - C.krop
api/kreya/ContractsService/Delete Contracts/: Delete A - B - C-request.json  Delete A - B - C.krop  Delete A - B.krop  Delete A - C-request.json  Delete A - C.krop
api/kreya/ContractsService/Get Certificates/: Get Certs for PKI_A with Hash-request.json  Get Certs for PKI_A with Hash.krop  Get Certs for PKI_A-request.json  Get Certs for PKI_A.krop  Get Certs for PKI_B-request.json  Get Certs for PKI_B.krop  Get Certs for PKI_C-request.json  Get Certs for PKI_C.krop  Get Certs for PKI_NOTFOUND-request.json  Get Certs for PKI_NOTFOUND.krop
api/proto/: contracts.proto
api/src/: contracts_service.rs  main.rs  utils.rs
api/src/grpc/: mod.rs
api/src/storage/: kubernetes.rs  local.rs  mod.rs
gui/: .dockerignore  .gitignore  15-set-dns-server.sh  25-set-dns-server.sh  ContractRepository.sln  Dockerfile  docker-compose.yml  nginx.conf  nginx.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js  webpack.config.prod.js
gui/src/: app.ts  (+4 more)
(+37 files in other folders)
