[package]
name = "k8s-contract-repository"
version = "0.0.0-development"
edition = "2021"

[dependencies]
clap = { version = "3.2.5", features = ["derive", "env"] }
custom_error = "1.9.2"
env_logger = "0.9.0"
hex = "0.4.3"
itertools = "0.10.3"
log = "0.4.17"
openssl = "0.10.40"
openssl-sys = "0.9.74"
prost = "0.10.4"
prost-types = "0.10.1"
sha2 = "0.10.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tonic = { version = "0.7.2", features = ["tls", "tls-roots", "tls-roots-common"] }
tonic-types = "0.5.0"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tonic-build = "0.7.2"
